--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HPR SKAK ELO</title>
 
-  <!-- PWA / Ikoner (RETTET) -->
-  <link rel="manifestt
-  <link rel="icon" type="image/png" sizes="32x32" href=" -->
+  <!-- PWA / Ikoner (RETTET & GYLDIGT) -->
+  <link rel="manifest" href="manifest.webmanifest"age/png" sizes="32x32eta tags -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="HPR SKAK ELO" />
-  <link rel="apple-touch-icon" href="apple-touch" content="#0d1117" />
+  apple-touch-icon.png
+  <meta name="theme-color" content="#0d1117" />
 
   <style>
     :root {
@@ -33,31 +33,48 @@
       font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     }
 
-    /* ---------- CENTRERING + SMAL VISNING ---------- */
+    /* ---------- CENTRERING ---------- */
     body {
       display: flex;
       flex-direction: column;
-      align-items: center; /* centrer hele indholdskolonnen */
-    }
-
-    header .wrap,
-    main,
-    .footerwrap {
-      width: 100%;
-      margin: 0 auto;
+      align-items: center;
     }
 
     header .wrap {
+      width: 100%;
       display: flex; gap: 12px; align-items: center; justify-content: space-between;
+      padding: 12px 16px;
+      /* Centrer containeren visuelt */
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
     h1 { margin: 0; font-size: 20px; font-weight: 600; letter-spacing: 0.2px; }
 
-    /* Fjern venstremargin, når vi centrerer kolonnen */
-    main { margin: 16px 0 96px 0; padding: 0; }
+    main {
+      width: 100%;
+      display: flex;
+      justify-content: center; /* centrer kortet */
+      margin: 16px 0 96px 0;
+      padding: 0 16px;
+    }
 
-    .card { background: var(--panel); border:1px solid var(--border); border-radius: 10px; width:100%; }
-    .card h2 { margin: 0; padding: 14px 16px; border-bottom:1px solid var(--border); font-size: 16px; font-weight: 600; }
+    /* ---------- LISTE (MAKS 80% AF SIDEN, CENTRERET) ---------- */
+    .card {
+      background: var(--panel);
+      border:1px solid var(--border);
+      border-radius: 10px;
+      width: 100%;
+      max-width: 80vw;      /* <= Her sættes max bredde til ~80% af viewport */
+      margin: 0 auto;       /* centrer kortet */
+      overflow: hidden;
+    }
+
+    .card h2 {
+      margin: 0; padding: 14px 16px;
+      border-bottom:1px solid var(--border);
+      font-size: 16px; font-weight: 600;
+    }
 
     table { width: 100%; border-collapse: collapse; }
     thead th { text-align: left; padding: 10px 12px; color: var(--muted); font-weight: 500; font-size: 14px; }
@@ -66,6 +83,12 @@
     .rank { width: 64px; color: var(--muted); }
     .name { font-weight: 600; }
     .elo { font-variant-numeric: tabular-nums; text-align: right; }
+
+    /* Sørg for at selve tabellen heller ikke bliver bredere end 80% */
+    #players {
+      max-width: 80vw;  /* matcher kortets grænse */
+      margin: 0 auto;
+    }
 
     .controls { display:flex; gap:8px; align-items:center; flex-wrap: wrap; }
     button, select, input {
@@ -79,9 +102,13 @@
       position: fixed; left:0; right:0; bottom:0;
       background: rgba(22,27,34,0.98); border-top: 1px solid var(--border);
       padding: 10px 12px; z-index: 10;
-      display: flex; justify-content: center;  /* centrer footer-indholdet */
+      display: flex; justify-content: center;
     }
-    .footerwrap { display: grid; grid-template-columns: 1fr; gap:8px; }
+    .footerwrap {
+      width: 100%;
+      max-width: 80vw;       /* samme 80% princip i bunden */
+      display: grid; grid-template-columns: 1fr; gap:8px;
+    }
 
     .calc { display: grid; grid-template-columns: repeat(12, 1fr); gap:8px; align-items: center; }
     .calc label { color: var(--muted); font-size: 13px; }
@@ -112,7 +139,7 @@
 
       /* Udnyt siden i print */
       header .wrap, main { max-width: 100% !important; }
-      .card { background:#fff !important; border:1px solid #ccc !important; }
+      .card { max-width: 100% !important; background:#fff !important; border:1px solid #ccc !important; }
       thead th { color:#000 !important; border-bottom:1px solid #000 !important; }
       tbody td { border-top:1px solid #ddd !important; }
       tbody tr:hover { background: transparent !important; }
@@ -269,7 +296,7 @@
     // Service worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('SW registered'))
+        .then(() => console.log('Service worker registered'))
         .catch(err => console.error('SW registration failed:', err));
     }
 
@@ -288,13 +315,11 @@
       if (!deferredPrompt) return;
       deferredPrompt.prompt();
       const choiceResult = await deferredPrompt.userChoice;
-      console.log('User choice', choiceResult.outcome);
       installBtn.style.display = 'none';
       deferredPrompt = null;
     });
 
     window.addEventListener('appinstalled', () => {
-      console.log('App installed');
       installBtn.style.display = 'none';
     });
 
