Fix PWA manifest and icon links in index.html
Updated PWA links and meta tags for better compatibility.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>HPR SKAK ELO</title>
 
   <!-- PWA / Ikoner (RETTET & GYLDIGT) -->
-  <link relwebmanifest
-  <link rel="icon" type="image/png" sizes="32x32" href="ple-touch-icon.png="#0d1117" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="HPR SKAK ELO" />
+<link rel="manifest" href="./manifest.webmanifest" />
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<meta name="apple-mobile-web-app-title" content="HPR SKAK ELO" />
 
   <style>
     :root {
